static/styles.css
header {
  width: 100%;
  height: 20%;
  background-color: #003366;
  position: absolute;
  top: 0;
  left: 0;
}

body{
  background-color: #cccccc;
}

h2 {
  color: #003366;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  margin: 20px 10px 10px 10px;
}

h3 {
  color: #ed6500;
  font-family: 'Alegreya Sans', sans-serif;
  margin: 0 10px 5px 10px;
}

p {
  color: black;
  font-family: Arial, Helvetica, sans-serif;
  margin: 0 10px 15px 10px;
}

a:link {
  text-decoration: none;
}

.box {
  width: 70%;
  background-color: white;
  border: thin solid #b3b3b3;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  position: absolute;
  top: 25%;
  margin: 0 15% 0 15%;
}

.top{
  width: 70%;
  margin: 0 15% 0 15%;
  padding: 10px;
}

.login {
  background-color: #ed6500;
  border: none;
  color: white;
  padding: 12px 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
  float: right;
}

.name {
  text-align: left;
  font-family: 'Alegreya Sans', sans-serif;
  color: white;
  font-size: 40px;
  margin: 0;
  padding: 0;
  display: inline-block;
}

.vl {
  border-left: 1px solid #cccccc;
  height: 90%;
  position: absolute;
  left: 30%;
  margin-left: 10px;
  top: 5%;
}

.items {
  position: absolute;
  left: 35%;
  top: 0;
}

